Milestones are edited as cards, objectives and items included
The config editor drew a card only for a list whose entries held nothing
but single values, so the track in milestones.yml fell back to read-only
text. Cards now follow the schema as deep as it goes: a list of values is
a list control, a list of sections is a list of cards again, and each
card is titled by its key. The writer adds, edits and removes an entry
at any depth and keeps every comment it does not touch; removing the
last one leaves an empty list rather than a null.

Unlocks and objective types are offered as closed lists that match the
enums the plugin reads them into.